--- a/Haitham's Project/App.config
+++ b/Haitham's Project/App.config
@@ -3,8 +3,8 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="Haitham_s_Project.Properties.Settings.NorthwindConnectionString"
-            connectionString="Data Source=HR-111\SQLEXPRESS;Initial Catalog=Northwind;Integrated Security=True"
+        <add name="cn"
+            connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Northwind;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
