--- a/Haitham's Project/packages.config
+++ b/Haitham's Project/packages.config
@@ -1,10 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net472" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="6.0.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="6.0.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
   <package id="Telerik.Reporting.JsonSerialization.Trial" version="16.0.22.225" targetFramework="net472" />
   <package id="Telerik.Reporting.Services.WebApi.Trial" version="16.0.22.225" targetFramework="net472" />
   <package id="Telerik.Reporting.Trial" version="16.0.22.225" targetFramework="net472" />
