--- a/Haitham's Project/App.config
+++ b/Haitham's Project/App.config
@@ -4,6 +4,11 @@
     </configSections>
     <connectionStrings>
         <add name="Connection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Northwind;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" />
+        <add name="Haitham_s_Project.Properties.Settings.NorthwindConnectionString"
+            connectionString="Data Source=HR-111\SQLEXPRESS;Initial Catalog=Northwind;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="Haitham_s_Project.Properties.Settings.Northwind" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Northwind;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
